# IT279_Assignment5

./: CMakeLists.txt  README.md
a05_q1/: SplayTree.cpp  q1_app.cpp
a05_q2/: SplayTree.cpp  SplayTree.h  q2_app.cpp
a05_q3/: SplayTree.cpp  SplayTree.h  flags.h  q3_app.cpp
