cmake_minimum_required(VERSION 3.21)
project(IT279_Assignment5)

set(CMAKE_CXX_STANDARD 14)

# question 1
#add_executable(IT279_Assignment5 a05_q1/q1_app.cpp a05_q1/SplayTree.cpp)

# question 2
add_executable(IT279_Assignment5 a05_q2/q2_app.cpp a05_q2/SplayTree.cpp)

# question 3
#add_executable(IT279_Assignment5 a05_q3/q3_app.cpp a05_q3/SplayTree.cpp)